<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/titulo"
        android:textColor="@color/titulo"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_login"
        android:layout_width="306dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:layout_gravity="center"
        android:hint="@string/login"
        android:textColorHint="@color/textoHint"
        android:textColor="@color/detalheLaranja"
        android:padding="12dp"
        android:background="@drawable/edit_text_style"/>

    <EditText
        android:id="@+id/edt_senha"
        android:inputType="textPassword"
        android:layout_width="306dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:hint="@string/senha"
        android:textColorHint="@color/textoHint"
        android:textColor="@color/detalheLaranja"
        android:padding="12dp"
        android:background="@drawable/edit_text_style"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_novaConta"
            android:layout_width="135dp"
            android:layout_height="50dp"
            android:text="@string/sign_up"
            android:textColor="@color/detalheLaranja"
            android:background="@drawable/botao_branco"/>

        <Button
            android:id="@+id/btn_entrar"
            android:layout_width="135dp"
            android:layout_height="50dp"
            android:layout_marginLeft="36dp"
            android:background="@drawable/botao_laranja"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</LinearLayout>