<resources>
    <string name="app_name">mybooks</string>
    <string name="titulo">myBooks</string>
    <string name="sign_up">Criar conta</string>
    <string name="sign_in">Entrar</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="criarCadastro">Criar cadastro</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="cancelar">Cancelar</string>
...
